@@ -1,3 +1,9 @@
+Tue Apr 12 18:51:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Bug_3943_Regression_Test.cpp:
+
+          More scoreboard cleanup.
+
 Mon Apr 11 17:21:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-qnx.h:
